File Paths werden jetzt richtig eingelesen und das rootverzeichnis in allen Fällen richtig gelesen

--- a/Intelligence Module/PDF Recoc/PDF-Einlesen/conf.ini
+++ b/Intelligence Module/PDF Recoc/PDF-Einlesen/conf.ini
@@ -2,9 +2,13 @@
 logFile = PdfEinlese.log
 logLevel = DEBUG
 
+presentationMode = false
+
 outputPath = Converted
 
 tmpPath = tmp\\
+
+root = D:\Matura Project\Repos\Intelligence Module\PDF Recoc\PDF-Einlesen
 
 [db]
 pathToDLL = C:\Program Files\Firebird\Firebird_5_0\\fbclient.dll
