--- a/Intelligence Module/PDF Recoc/conf.ini
+++ b/Intelligence Module/PDF Recoc/conf.ini
@@ -1,26 +1,26 @@
-[general]
-# File in wich the logging gets written
+; File in wich the logging gets written
+[general] 
 logFile = PdfEinlese.log
-# DEBUG/INFO
+; DEBUG/INFO
 logLevel = DEBUG
 
-# Name of the Output Folder
+; Name of the Output Folder
 outputPath = Converted
 
-# Name of the Folder for the Temporary Images
+; Name of the Folder for the Temporary Images
 tmpPath = tmp\
 
-# Name of the Folder Containing the to be converted Pdf Files\Firebird\Firebird_5_0\\fbclient
+; Name of the Folder Containing the to be converted Pdf Files\Firebird\Firebird_5_0\\fbclient
 pdfRootPath = \Pdf-Einlesen\PlanPdf
 
 [db]
-# Path to the DLL from the Firebird database
+; Path to the DLL from the Firebird database
 pathToDLL = C:\Program Files\Firebird\Firebird_5_0\\fbclient.dll
 
 [tesseract]
-# Path to the pytesseract exe
+; Path to the pytesseract exe
 pathToTesseract = C:\Program Files\Tesseract-OCR\tesseract.exe
 
 [Poppler]
-# Path to Poppler
+; Path to Poppler
 pathToPoppler = C:\Program Files\poppler-24.07.0\Library\bin
