--- a/Intelligence Module/PDF Recoc/PDF-Einlesen/.vscode/launch.json
+++ b/Intelligence Module/PDF Recoc/PDF-Einlesen/.vscode/launch.json
@@ -7,35 +7,35 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            // "args": [
-            //     "--FileMode",
-            //     "single",
-
-            //     "--FilePath",
-            //     "MFH-RF1-Brandschutzplan.pdf",
-
-            //     "--Rotation",
-            //     "nr",
-
-            //     "--UsedPages",
-            //     "0",
-            //     "3",
-            //     "5"
-            // ]
             "args": [
                 "--FileMode",
-                "multi",
+                "single",
+
+                "--FilePath",
+                "MFH-RF1-Brandschutzplan.pdf",
 
                 "--Rotation",
                 "nr",
 
-                "--UsedDir",
-                "GIA",
-
-                "--UsedPdf",
-                "BSP_BUERO_OG.pdf",
-                "BSP_LAGER.pdf"
+                "--UsedPages",
+                "0",
+                "3",
+                "5"
             ]
+            // "args": [
+            //     "--FileMode",
+            //     "multi",
+
+            //     "--Rotation",
+            //     "nr",
+
+            //     "--UsedDir",
+            //     "GIA",
+
+            //     "--UsedPdf",
+            //     "BSP_BUERO_OG.pdf",
+            //     "BSP_LAGER.pdf"
+            // ]
         }
     ]
 }
