Kleine änderung im Conf und Interface

--- a/Intelligence Module/PDF Recoc/conf.ini
+++ b/Intelligence Module/PDF Recoc/conf.ini
@@ -24,3 +24,6 @@ pathToTesseract = C:\Program Files\Tesseract-OCR\tesseract.exe
 [Poppler]
 ; Path to Poppler
 pathToPoppler = C:\Program Files\poppler-24.07.0\Library\bin
+
+[Converter]
+pathToConverter = \PdfEinlesen\
