--- a/Intelligence Module/PDF Recoc/conf.ini
+++ b/Intelligence Module/PDF Recoc/conf.ini
@@ -15,7 +15,7 @@ pdfRootPath = \Pdf-Einlesen\PlanPdf
 
 [db]
 ; Path to the DLL from the Firebird database
-pathToDLL = C:\Users\Elias.Mutter\Documents\Repos\Intelligence Module\PDF Recoc\Firebird\fbclient.dll
+pathToDLL = \Firebird\fbclient.dll
 
 [tesseract]
 ; Path to the pytesseract exe
