Neue Logging Infrastruktur auf die anderen sCripts ausgeweitet

--- a/Intelligence Module/PDF Recoc/conf.ini
+++ b/Intelligence Module/PDF Recoc/conf.ini
@@ -1,6 +1,6 @@
 [ReadPdf] 
 ; File in wich the logging gets written
-logFile = LogFiles\PdfEinlese.log
+logFile = \LogFiles\PdfEinlese.log
 ; DEBUG/INFO
 logLevel = DEBUG
 
