Bundling Tesseract, Tesseract Folder muss noch kopiert werden

--- a/Intelligence Module/PDF Recoc/conf.ini
+++ b/Intelligence Module/PDF Recoc/conf.ini
@@ -18,6 +18,8 @@ pathToConverter = \PdfEinlesen\
 
 [Interface]
 logFile = \LogFiles\Interface.log
+; DEBUG/INFO
+logLevel = DEBUG
 
 [db]
 ; Path to the DLL from the Firebird database
@@ -25,7 +27,7 @@ pathToDLL = \Firebird\fbclient.dll
 
 [tesseract]
 ; Path to the pytesseract exe
-pathToTesseract = C:\Program Files\Tesseract-OCR\tesseract.exe
+pathToTesseract = \Tesseract-OCR\tesseract.exe
 
 [Poppler]
 ; Path to Poppler
